@@ -1,53 +1,37 @@
 /*
- * MIT License
- *
- * Copyright (c) 2020 Airbyte
- *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included in all
- * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
+ * Copyright (c) 2023 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.integrations.destination.e2e_test;
 
 import static org.mockito.Mockito.mock;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.collect.ImmutableMap;
+import io.airbyte.cdk.integrations.base.AirbyteMessageConsumer;
 import io.airbyte.commons.json.Jsons;
-import io.airbyte.integrations.base.AirbyteMessageConsumer;
-import io.airbyte.protocol.models.AirbyteMessage;
-import io.airbyte.protocol.models.AirbyteMessage.Type;
-import io.airbyte.protocol.models.AirbyteRecordMessage;
+import io.airbyte.protocol.models.v0.AirbyteMessage;
+import io.airbyte.protocol.models.v0.AirbyteMessage.Type;
+import io.airbyte.protocol.models.v0.AirbyteRecordMessage;
 import java.time.Instant;
-import java.util.Map;
+import java.util.Collections;
 import java.util.function.Consumer;
 import org.junit.jupiter.api.Test;
 
 /**
- * This source is designed to be a switch statement for our suite of highly-specific test sourcess.
+ * This source is designed to be a switch statement for our suite of highly-specific test sources.
  */
 public class ThrottledDestinationTest {
 
   @SuppressWarnings("unchecked")
   @Test
   void test() throws Exception {
-    Consumer<AirbyteMessage> outputRecordCollector = mock(Consumer.class);
-    final AirbyteMessageConsumer consumer = new ThrottledDestination()
-        .getConsumer(Jsons.jsonNode(Map.of("millis_per_record", 10)), null, outputRecordCollector);
+    final Consumer<AirbyteMessage> outputRecordCollector = mock(Consumer.class);
+
+    final JsonNode config = Jsons.jsonNode(
+        Collections.singletonMap("test_destination", Collections.singletonMap("millis_per_record", 10)));
+
+    final AirbyteMessageConsumer consumer = new ThrottledDestination().getConsumer(config, null, outputRecordCollector);
 
     consumer.accept(getAnotherRecord());
     consumer.accept(getAnotherRecord());
